src/objects/PIR_Root_Cause_Case_Item__c.object
<CustomObject>
    <description>This object is used to store the root cause values of case on case items</description>
    <fields>
        <fullName>Case_Item__c</fullName>
        <description>this is look up field to case item object</description>
        <label>Case Item</label>
        <referenceTo>Case_Item__c</referenceTo>
        <relationshipName>PIR_Root_Cause_Case_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Root_Cause_1_Key_Code__c</fullName>
        <description>this field will store the root cause 1 Key Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 1 Key Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_1__c</fullName>
        <description>this field will store the root cause 1 value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_2_Key_Code__c</fullName>
        <description>this field will store the root cause 2 Key Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 2 Key Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_2__c</fullName>
        <description>this field will store the root cause 2 value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_3_Key_Code__c</fullName>
        <description>this field will store the root cause 3 Key Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 3 Key Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_3__c</fullName>
        <description>this field will store the root cause 3 value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PIR Root Cause Case Item</label>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>RootCause</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIR Root Cause Case Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>